tests/negative/neg_pr1162_removed_goto.safe
package neg_pr1162_removed_goto

   function build returns integer

      goto Done;
      return 0;
